Add script in body of html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Shopping Card</title>
     <!-- font awesome -->
     <!-- custom css -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<script src="app.js"></script>
 </body>
 </html>
