Add font awesome script in html's head

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Card</title>
     <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/6d717548c7.js" crossorigin="anonymous"></script>
     <!-- custom css -->
     <link rel="stylesheet" href="style.css">
 </head>
