--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Card</title>
-    <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/6d717548c7.js" crossorigin="anonymous"></script>
-    <!-- custom css -->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<script src="app.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Shopping Card</title>
+        <!-- font awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- custom css -->
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <!-- navbar -->
+        <nav class="navbar">
+            <div class="navbar-center">
+                <span class="nav-icon">
+                    <i class="fa fa-bars"></i>
+                </span>
+                <img src="./images/logo.svg" alt="store logo"/>
+                <div class="cart-btn">
+                    <span class="nav-icon">
+                        <i class="fa fa-cart-plus"></i>  
+                    </span>
+                    <div class="cart-items">0</div>
+                </div>
+            </div>
+        </nav>
+        <!-- end of navbar -->
+        <script src="app.js"></script>
+    </body>
 </html>
