--- a/index.html
+++ b/index.html
@@ -53,6 +53,97 @@
                     <h4>$156</h4>
                 </article>
                 <!-- end of single product -->
+                <!-- single product -->
+                <article class="product">
+                    <div class="img-container">
+                        <img src="./images/product-2.jpeg" alt="product" class="product-img">
+                        <button class="bag-btn" data-id="1">
+                            <i class="fas fa-shopping-cart"></i>
+                            add to bag
+                        </button>
+                    </div>
+                    <h3>queen bed</h3>
+                    <h4>$156</h4>
+                </article>
+                <!-- end of single product -->
+                <!-- single product -->
+                <article class="product">
+                    <div class="img-container">
+                        <img src="./images/product-3.jpeg" alt="product" class="product-img">
+                        <button class="bag-btn" data-id="1">
+                            <i class="fas fa-shopping-cart"></i>
+                            add to bag
+                        </button>
+                    </div>
+                    <h3>queen bed</h3>
+                    <h4>$156</h4>
+                </article>
+                <!-- end of single product -->
+                <!-- single product -->
+                <article class="product">
+                    <div class="img-container">
+                        <img src="./images/product-4.jpeg" alt="product" class="product-img">
+                        <button class="bag-btn" data-id="1">
+                            <i class="fas fa-shopping-cart"></i>
+                            add to bag
+                        </button>
+                    </div>
+                    <h3>queen bed</h3>
+                    <h4>$156</h4>
+                </article>
+                <!-- end of single product -->
+                <!-- single product -->
+                <article class="product">
+                    <div class="img-container">
+                        <img src="./images/product-5.jpeg" alt="product" class="product-img">
+                        <button class="bag-btn" data-id="1">
+                            <i class="fas fa-shopping-cart"></i>
+                            add to bag
+                        </button>
+                    </div>
+                    <h3>queen bed</h3>
+                    <h4>$156</h4>
+                </article>
+                <!-- end of single product -->
+                <!-- single product -->
+                <article class="product">
+                    <div class="img-container">
+                        <img src="./images/product-6.jpeg" alt="product" class="product-img">
+                        <button class="bag-btn" data-id="1">
+                            <i class="fas fa-shopping-cart"></i>
+                            add to bag
+                        </button>
+                    </div>
+                    <h3>queen bed</h3>
+                    <h4>$156</h4>
+                </article>
+                <!-- end of single product -->
+                <!-- single product -->
+                <article class="product">
+                    <div class="img-container">
+                        <img src="./images/product-7.jpeg" alt="product" class="product-img">
+                        <button class="bag-btn" data-id="1">
+                            <i class="fas fa-shopping-cart"></i>
+                            add to bag
+                        </button>
+                    </div>
+                    <h3>queen bed</h3>
+                    <h4>$156</h4>
+                </article>
+                <!-- end of single product -->
+                <!-- single product -->
+                <article class="product">
+                    <div class="img-container">
+                        <img src="./images/product-8.jpeg" alt="product" class="product-img">
+                        <button class="bag-btn" data-id="1">
+                            <i class="fas fa-shopping-cart"></i>
+                            add to bag
+                        </button>
+                    </div>
+                    <h3>queen bed</h3>
+                    <h4>$156</h4>
+                </article>
+                <!-- end of single product -->
             </div>
         </section>
         <!-- end of prodducts -->
