--- a/index.html
+++ b/index.html
@@ -144,6 +144,23 @@
                     <h4>$156</h4>
                 </article>
                 <!-- end of single product -->
+                <!-- cart -->
+                <div class="cart-overlay">
+                    <div class="cart">
+                        <span class="close-cart">
+                            <i class="fas fa-window-close"></i>
+                        </span>
+                        <h2>your cart</h2>
+                        <div class="cart-content">
+                            <!-- cart item -->
+                            <div class="cart-item">
+                                <img src="./images/product-1.jpeg" alt="product">
+                            </div>
+                            <!-- end of cart item -->
+                        </div>
+                    </div>
+                </div>
+                <!-- end of cart -->
             </div>
         </section>
         <!-- end of prodducts -->
